@@ -2,6 +2,9 @@ Pygame-ctypes 0.08
 ------------------
  - Filled ellipse does not hang when rx or ry == 0
  - Allow rotozoom on 24 bit surfaces
+ - Rect.topleft.set fixed
+ - transform.rotate on big endian fixed
+ - Workaround for TTF_RenderText_Solid not working on OS X
 
 Pygame-ctypes 0.07
 ------------------
